Social Links are added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="active"><a href="index.html">HOME</a></li>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="albums.html">ALBUMS</a></li>
-                    <li><a href="upcomingshows.html">UPCOMING CONCERTS</a></li>
+                    <li><a href="upcomingconcerts.html">UPCOMING CONCERTS</a></li>
                     <h5 class="genres"><i>Genres: Avant-garde, alternative-rock</i></h5>
                 </ul>
            </div>
@@ -48,12 +48,11 @@
             <div class="container-fluid">
                <div class="navbar-header navbar-right">
                     <ul class="list-inline social-links">
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-youtube"></i></a></li>
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-spotify"></i></a></li>
-                            <li><a target-"_blank" href="#"><i class="fa fa-2x fa-soundcloud"></i></a></li>
-                            <li><a target-"_blank" href="#"><i class="fa fa-2x fa-mixcloud"></i></a></li>
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-facebook"></i></a></li>
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-instagram"></i></a></li>
+                           <li><a href="https://youtu.be/KBBr064nbnE" target "_blank"><i class="fa fa-2x fa-youtube"></i></a></li>
+                           <li><a href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj" target-"_blank"><i class="fa fa-2x fa-spotify"></i></a></li>
+                            <li><a href="https://soundcloud.com/cemadrianofficial" target-"_blank"><i class="fa fa-2x fa-soundcloud"></i></a></li>
+                            <li><a href="https://www.facebook.com/cemadrian/" target-"_blank"><i class="fa fa-2x fa-facebook"></i></a></li>
+                           <li><a  href="https://www.instagram.com/cemadrian/?hl=en" target-"_blank"><i class="fa fa-2x fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
