mp3 file and audioplayer added

--- a/albums.html
+++ b/albums.html
@@ -37,16 +37,47 @@
       <div class="container-fluid container-main">
            <div class="col xs-12 col sm-12 col-md-8 main-body">
               <div class="row">
-              <div class="column"><img class="img-album" src="/assets/images/askbugece.jpg"></div>
-              <div class="column"><img class="img-album" src="/assets/images/benbusarki.jpg"></div>
-              <div class="column"><img  class="img-album" src="assets/images/kayipcocuk.jpg"></div>
+              <div class="column"><img class="img-album" src="/assets/images/askbugece.jpg">
+              <p><span class="audioplayer">
+              <audio controls preload="auto" style=" width:100px; height:70px;">
+	         <source src="/assets/mp3/Cem%20Adrian%20-%20Ayr%C4%B1l%C4%B1k%20(live).mp3" type="audio/mpeg">Your browser does not support the audio element.
+             </audio></span></p>
+              </div>
+              <div class="column"><img class="img-album" src="/assets/images/benbusarki.jpg">
+              <p><span class="audioplayer">
+              <audio controls preload="auto" style=" width:100px; height:70px;">
+	         <source src="/assets/mp3/Cem%20Adrian%20-%20Ben%20Seni%20C%CC%A7ok%20Sevdim.mp3" type="audio/mpeg">Your browser does not support the audio element.
+             </audio></span></p>
+              </div>
+              <div class="column"><img  class="img-album" src="assets/images/kayipcocuk.jpg">
+              <p><span class="audioplayer">
+              <audio controls preload="auto" style=" width:100px; height:70px;">
+	         <source src="/assets/mp3/Cem Adrian - Bir Katilin Ellerinde.mp3" type="audio/mpeg">Your browser does not support the audio element.
+             </audio></span></p>
+              </div>
               </div> 
               <div class="row">
-              <div class="column"><img class="img-album" src="assets/images/onlara.jpg"></div>
-              <div class="column"><img class="img-album" src="/assets/images/sekerprens.jpg"></div>
-              <div class="column"><img class="img-album" src="/assets/images/siyahvedaopucugu.jpg"></div>
-              </div>        
-            </div>
+              <div class="column"><img class="img-album" src="assets/images/onlara.jpg">
+              <p><span class="audioplayer">
+              <audio controls preload="auto" style=" width:100px; height:70px;">
+	         <source src="/assets/mp3/Cem Adrian - Kalbim.mp3" type="audio/mpeg">Your browser does not support the audio element.
+             </audio></span></p>
+              </div>
+              <div class="column"><img class="img-album" src="/assets/images/sekerprens.jpg">
+              <p><span class="audioplayer">
+              <audio controls preload="auto" style=" width:100px; height:70px;">
+	         <source src="/assets/mp3/Tuba Ferah&Cem Adrian.mp3" type="audio/mpeg">Your browser does not support the audio element.
+             </audio></span></p>
+              </div>
+              <div class="column"><img class="img-album" src="/assets/images/siyahvedaopucugu.jpg">
+              <p><span class="audioplayer">
+              <audio controls preload="auto" style=" width:100px; height:70px;">
+	         <source src="/assets/mp3/Cem Adrian Yakamoz (Ahmet Kaya cover ).mp3" type="audio/mpeg">Your browser does not support the audio element.
+             </audio></span></p>
+              </div>
+              </div>  
+             
+        </div>
         </div>
         <footer class="container-fluid container-footer bg-color-footer">
             <div class="container-fluid">
