--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
             <div class="container-fluid">
                <div class="navbar-header navbar-right">
                     <ul class="list-inline social-links">
-                           <li><a href="https://youtu.be/KBBr064nbnE" target "_blank"><i class="fa fa-2x fa-youtube"></i></a></li>
-                           <li><a href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj" target-"_blank"><i class="fa fa-2x fa-spotify"></i></a></li>
-                            <li><a href="https://soundcloud.com/cemadrianofficial" target-"_blank"><i class="fa fa-2x fa-soundcloud"></i></a></li>
-                            <li><a href="https://www.facebook.com/cemadrian/" target-"_blank"><i class="fa fa-2x fa-facebook"></i></a></li>
-                           <li><a  href="https://www.instagram.com/cemadrian/?hl=en" target-"_blank"><i class="fa fa-2x fa-instagram"></i></a></li>
+                           <li><a  target-"_blank" href="https://youtu.be/KBBr064nbnE"><i class="fa fa-2x fa-youtube"></i></a></li>
+                           <li><a  target-"_blank" href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj"><i class="fa fa-2x fa-spotify"></i></a></li>
+                            <li><a target-"_blank" href="https://soundcloud.com/cemadrianofficial"><i class="fa fa-2x fa-soundcloud"></i></a></li>
+                            <li><a target-"_blank" href="https://www.facebook.com/cemadrian/"><i class="fa fa-2x fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
