Toggle Dropdown issue is solved

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
+<head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
+        <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie|Shadows+Into+Light" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    </head>
-        <nav class="navbar navbar-default">
+</head>    
+<body>
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="/" class="navbar-brand">
@@ -24,38 +26,39 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">HOME</a></li>
                     <li><a href="bio.html">BIO</a></li>
-                    <li><a href="albums.html">ALBUMS</a></li>
+                    <li><a href="samplemp3.html">SampleMp3</a></li>
                     <li><a href="upcomingconcerts.html">UPCOMING CONCERTS</a></li>
-                    <h5 class="genres"><i>Genres: Avant-garde, alternative-rock</i></h5>
+                     
                 </ul>
            </div>
            </div>
         </nav>
-    <body>
-              <div class="container-fluid container-main">
-                 <div class="col xs-12 col sm-12 col-md-4 main-body">
-                  <div class="row">
-                  <h2 class="cemadrian">If you have all of the words, I have the silence!  --Cem Adrian</h2>
-                  </div>
-                  <div class="container-fluid container-video">
-                  <div class="row">
-                  <iframe width="600" height="365" src="https://www.youtube.com/embed/R7r06BeALwU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
-                 </div>
-                </div>
-               </div>
+    <div class="container-fluid container-main">
+        <div class="col xs-12 col sm-12 col-md-4 main-body">
+            <div class="row">
+                <h2 class="cemadrian">If you have all of the words, I have the silence! --Cem Adrian</h2>
             </div>
-        <footer class="container-fluid container-footer bg-color-footer">
-            <div class="container-fluid">
-               <div class="navbar-header navbar-right">
-                    <ul class="list-inline social-links">
-                           <li><a  target-"_blank" href="https://youtu.be/KBBr064nbnE"><i class="fa fa-2x fa-youtube"></i></a></li>
-                           <li><a  target-"_blank" href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj"><i class="fa fa-2x fa-spotify"></i></a></li>
-                            <li><a target-"_blank" href="https://soundcloud.com/cemadrianofficial"><i class="fa fa-2x fa-soundcloud"></i></a></li>
-                            <li><a target-"_blank" href="https://www.facebook.com/cemadrian/"><i class="fa fa-2x fa-instagram"></i></a></li>
-                    </ul>
+            <div class="container-fluid container-video">
+                <div class="row">
+                    <iframe width="600" height="365" src="https://www.youtube.com/embed/R7r06BeALwU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
                 </div>
             </div>
-        </footer>
-         <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
-    </body>
+        </div>
+    </div>
+    <footer class="container-fluid container-footer bg-color-footer">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-right">
+                <ul class="list-inline social-links">
+                    <li><a target="_blank" href="https://youtu.be/KBBr064nbnE"><i class="fa fa-2x fa-youtube"></i></a></li>
+                    <li><a target="_blank" href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj"><i class="fa fa-2x fa-spotify"></i></a></li>
+                    <li><a target="_blank" href="https://soundcloud.com/cemadrianofficial"><i class="fa fa-2x fa-soundcloud"></i></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/cemadrian/"><i class="fa fa-2x fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
+</body>
 </html>
