bio.html updated

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initialx-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
         <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie|Shadows+Into+Light" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
@@ -47,7 +47,7 @@
     </div>
     <footer class="container-fluid container-footer bg-color-footer">
         <div class="container-fluid">
-            <div class="navbar-header navbar-right">
+            <div class="navbar-footer navbar-right">
                 <ul class="list-inline social-links">
                     <li><a target="_blank" href="https://youtu.be/KBBr064nbnE"><i class="fa fa-2x fa-youtube"></i></a></li>
                     <li><a target="_blank" href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj"><i class="fa fa-2x fa-spotify"></i></a></li>
