--- a/upcomingconcerts.html
+++ b/upcomingconcerts.html
@@ -25,10 +25,10 @@
        <div class="navbar-collapse collapse" id="navbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">HOME</a></li>
-                    <li><a href="bio.html">BIO</a></li>
-                    <li><a href="samplemp3.html">SampleMp3</a></li>
-                    <li><a href="upcomingconcerts.html">UPCOMING CONCERTS</a></li>
-                    
+                    <li class="active"><a href="bio.html">BIO</a></li>
+                    <li class="active"><a href="samplemp3.html">SampleMp3</a></li>
+                    <li class="active"><a href="upcomingconcerts.html">UPCOMING CONCERTS</a></li>
+                     
                 </ul>
            </div>
            </div>
