the white space under the footer issue is solved

--- a/upcomingconcerts.html
+++ b/upcomingconcerts.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     </head>
      <body>
-        <nav class="navbar navbar-default">
+       <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="/" class="navbar-brand">
@@ -71,21 +71,18 @@
               </table>
              </div> 
             </div>
-        <footer class="container-fluid container-footer bg-color-footer">
+         <footer class="container-fluid container-footer bg-color-footer">
             <div class="container-fluid">
-               <div class="navbar-header navbar-right">
                     <ul class="list-inline social-links">
                            <li><a target="_blank" href="https://youtu.be/KBBr064nbnE"><i class="fa fa-2x fa-youtube-square"></i></a></li>
                            <li><a target="_blank" href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj"><i class="fa fa-2x fa-spotify"></i></a></li>
                             <li><a target="_blank" href="https://soundcloud.com/cemadrianofficial"><i class="fa fa-2x fa-soundcloud"></i></a></li>
-                            
                            <li><a target="_blank" href="https://www.facebook.com/cemadrian/"><i class="fa fa-2x fa-facebook"></i></a></li>
                            <li><a target="_blank" href="https://www.instagram.com/cemadrian/?hl=en"><i class="fa fa-2x fa-instagram"></i></a></li>
                     </ul>
-                </div>
             </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>git 
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         
     </body>
